2013-05-26  Holger Seelig  <holger.seelig@yahoo.de>

	* SplinePositionInterpolator.cpp: 

2013-05-26  Holger Seelig  <holger.seelig@yahoo.de>

	* SplinePositionInterpolator.cpp: 

2013-05-25  Holger Seelig  <holger.seelig@yahoo.de>

	* EaseInEaseOut.cpp: 

2013-05-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Scene.cpp:
	* EaseInEaseOut.h:
	* EaseInEaseOut.cpp:
	* X3DInterpolatorNode.cpp: 

2013-05-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Scene.h:
	* Scene.cpp:
	* X3DExecutionContext.h:
	* X3DExecutionContext.cpp: 

2013-05-22  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.cpp: 

2013-05-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Extrusion.cpp:
	* X3DGeometryNode.h:
	* IndexedFaceSet.cpp: 

2013-05-21  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DExecutionContext.h:
	* SupportedNodes.cpp:
	* SupportedFields.cpp:
	* X3DExecutionContext.cpp:
	* Extrusion.h:
	* Extrusion.cpp:
	* SupportedProfiles.cpp:
	* ComposedShader.cpp:
	* SupportedComponents.cpp:
	* IndexedFaceSet.h:
	* IndexedFaceSet.cpp: 

2013-05-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* X3DArrayField.h:
	* X3DBrowser.cpp:
	* X3DArrayFieldIterator.h:
	* UnorderedChildObjectSet.cpp: 

2013-05-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* NodeSet.h:
	* Parser.h:
	* X3DObject.h:
	* Router.h:
	* Grammar.h:
	* ObjectSet.h:
	* NodeSet.cpp:
	* X3DRoute.h:
	* RouteSet.h:
	* X3DContext.h:
	* Grammar.cpp:
	* ObjectSet.cpp:
	* X3DBaseNode.h:
	* X3DContext.cpp:
	* X3DScene.h:
	* RouteSet.cpp:
	* ChildObjectSet.h:
	* X3DChildObject.h:
	* X3DBaseNode.cpp:
	* X3DScene.cpp:
	* Generator.h:
	* ChildObjectSet.cpp:
	* X3DChildObject.cpp:
	* GarbageCollector.h:
	* Generator.cpp:
	* FieldDefinitionSet.h:
	* GarbargeCollector.cpp:
	* X3DFieldDefinition.cpp:
	* FieldDefinitionSet.cpp:
	* ChildObjectSet (Kopie).h:
	* X3DExecutionContext.h:
	* Anchor.cpp:
	* UnorderedChildObjectSet.cpp:
	* X3DUrlObject.h: