@@ -1,5 +1,10 @@
 2013-05-26  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* SplinePositionInterpolator.h:
+	* SplinePositionInterpolator.cpp: 
+
+2013-05-26  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* SplinePositionInterpolator.cpp: 
 
 2013-05-26  Holger Seelig  <holger.seelig@yahoo.de>
